oidc/manifests/webserver-microgateway-config/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: webserver
  namespace: oidc
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: airlock-gateway-auth
  to:
  - group: ""
    kind: Service
