oidc/manifests/webserver-microgateway-config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver
  namespace: airlock-gateway-auth
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-webserver
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: webserver
      namespace: oidc
      port: 8443
